@@ -39,4 +39,6 @@ LDFLAGS             = @LDFLAGS@
 LIBS                = @LIBS@
 
 CONFIG_SYSDEP_DIR   = @CONFIG_SYSDEP_DIR@
+CONFIG_LIBERTY      = @CONFIG_LIBERTY@
+
 LT_VER              = @LT_VER@
