@@ -1,3 +1,7 @@
+2010-02-28  Jiri Olsa <olsajiri@gmail.com>
+	* controled config bug fix
+	* liberty controled by autoconf now
+
 2010-02-13  Jiri Olsa <olsajiri@gmail.com>
 	* controled config feature
 	* disable auditing feature
